[gd_scene load_steps=5 format=3 uid="uid://dxr11ebd71ogy"]

[ext_resource type="Theme" uid="uid://cpml1p2hv5mba" path="res://global/settings.tres" id="1_e26s6"]
[ext_resource type="FontFile" uid="uid://2ib57q2lowff" path="res://characters/shared/Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" id="2_r3v7c"]
[ext_resource type="Script" path="res://game/result_screen.gd" id="2_tflib"]

[sub_resource type="LabelSettings" id="LabelSettings_eacov"]
font = ExtResource("2_r3v7c")
font_size = 64

[node name="ResultScreen" type="Panel"]
process_mode = 3
offset_left = 65.0
offset_top = 65.0
offset_right = 1150.0
offset_bottom = 641.0
theme = ExtResource("1_e26s6")
script = ExtResource("2_tflib")

[node name="ScoreContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 252.0
offset_top = 130.0
offset_right = 812.0
offset_bottom = 200.0

[node name="ErrorLabel" type="Label" parent="ScoreContainer"]
visible = false
layout_mode = 2
text = "You have to login to see highscores"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 17.0
offset_top = 18.0
offset_right = 1066.0
offset_bottom = 561.0
theme = ExtResource("1_e26s6")

[node name="Points" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "3000 points"
label_settings = SubResource("LabelSettings_eacov")
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Top scores"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 510.0
offset_right = 1060.0
offset_bottom = 546.0
theme = ExtResource("1_e26s6")
text = "Play again"

[node name="LoginButton" type="Button" parent="."]
visible = false
z_index = 2
layout_mode = 2
offset_left = 436.0
offset_top = 121.0
offset_right = 536.0
offset_bottom = 157.0
theme = ExtResource("1_e26s6")
text = "Login"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
